style.css
body {
	background-color: #F3E8D8; /* Parchment: #F3E8D8  Inverse: #030A1A */
	color: #black;
	
	font-family: monospace;
	font-size: 1.25em;
	
	min-height: 100vh;
	margin: 0;
	display: flex;
	flex-direction: column;
}

header, footer {
	text-align: center;
}

.navigation {
	display: flex;
	flex-direction: row;
	justify-content: center;
	gap: 40px;
	
	list-style-type: none;
	margin: 0;
	padding: 2vw;
}

a {
	color: black;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

a:active {
	text-decoration: underline;
	font-weight: bold;
}

main {
	padding: 0vw 20vw;
	flex: 1;
	display: flex;
	flex-direction: column;
	
	animation: fadeIn 1s;
}

h1 {
	font-size: 3.4vw;
	text-align: center;
}

h2 {
	font-size: 2vw;
	text-align: center;
}

h3 {
	font-size: 2vw;
}

p {
	text-indent: 4em;
}

h4 {
	font-size: 1em;
	font-weight: normal;
}

img {
	min-width: 45%;
	height: auto;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.image-text-horizontal {
	display: flex;
	flex-direction: row;
	align-items: center;
	gap: 10%;
}

.image-text-vertical {
	display: flex;
	flex-direction: column;
	align-items: center;
	gap: 10%;
	width: 33%;
}

#bottom-navigation {
	padding-top: 10vh;
	gap: 7vw;
	/*overflow: hidden;*/
	white-space: nowrap;
}

.arrow {
  border: solid black;
  border-width: 0 1.5px 1.5px 0;
  display: inline-block;
  padding: 4px;
}

.right {
  transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
}

.left {
  transform: rotate(135deg);
  -webkit-transform: rotate(135deg);
}

